# streaming-pc

./: README.md
dxgi/files/: CMakeLists.txt  README.md  build.bat  main.cpp
dxgi/files/.claude/: settings.local.json
scripts/: start-webcam.bat  stop-webcam.bat  stremio-fullscreen.ps1
vst/: default.els
